--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </div>
         </div>
         
-        <div class="mdl-card__actions mdl-card--border"">
+        <div class="mdl-card__actions mdl-card--border">
             <p> <i class="material-icons">mail</i> <a class="mdl-color-text--grey" href="mailto:cristiano.aguzzi@unibo.it?Subject=Support%20Calibration" target="_top">Cristiano Aguzzi</a></p>
         </div>
         
