Modify app background

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="google-signin-client_id" content="580774902883-9brt4i57e10nidlf65jeaa31m08venm6.apps.googleusercontent.com">
   
 </head>
-<body class= "mdl-grid">
+<body class= "mdl-grid" style="background-color: #ecf0f1">
    
     <div class="mdl-layout-spacer"></div>
   
@@ -80,7 +80,7 @@
             </div>
         </div>
         <div class= "swamp-panel mdl-grid" style="margin: unset">
-            <div class="center-elements mdl-cell--8-col"  >
+            <div class="center-elements mdl-cell--8-col" style="justify-content: unset;flex-direction: column" >
                 <div style="min-height: 270px; max-height: 270px; width: 80%; " >
                 <canvas id="regression"  width="1" height="1"></canvas>
                 </div>
