--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#27ae60">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
     <meta name="google-signin-client_id" content="580774902883-9brt4i57e10nidlf65jeaa31m08venm6.apps.googleusercontent.com">
-  
+    <link href="img/logo.png" type="image/x-icon" rel="shortcut icon" />
 </head>
 <body class= "mdl-grid" style="background-color: #ecf0f1">
    
@@ -156,7 +156,7 @@
 <script src="https://cdn.jsdelivr.net/npm/@arces-wot/sepa-js@0.4.0/web/sepa.js"></script>
 <script defer src="lib/regression.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/mathjs@5.4.2/dist/math.min.js"></script>
- <script src="lib/vue.js" async defer></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.6.0/dist/vue.js"></script>
 
 <script src="lib/main.js" type="module"></script>
 <script src="https://apis.google.com/js/platform.js" async defer></script>
