--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class="mdl-textfield mdl-js-textfield">
                         <input class="mdl-textfield__input" type="text" style="text-align: center" type="number" v-model.number="humidity"
                             :disabled="mesuring || !connected">
-                        <label class="mdl-textfield__label" style="text-align: center" for="sample1">Humidity</label>
+                        <label class="mdl-textfield__label" style="text-align: center" for="sample1">Water Content</label>
                     </div>
                     <button class="mdl-button mdl-js-button  mdl-button--raised mdl-js-ripple-effect" :disabled="!connected || !humidity" style="width: 100%">
                         {{ !mesuring ? "Start" : "Stop" }}
@@ -110,7 +110,7 @@
                        
                         <th>
                         Voltage</th>
-                        <th>Ref. Humidity</th>
+                        <th>Water Content</th>
                     </tr>
                 </thead>
                 <tbody>
