Modify voltage label in table to sample

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                        
                        
                         <th>
-                        Voltage</th>
+                        Sample</th>
                         <th>Water Content</th>
                     </tr>
                 </thead>
