Fix data panel width

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
           
             <div class="mdl-cell--4-col " style="display:flex; justify-content: center;align-items: center;">
-                <div style="max-width: 250px;">
+                <div style="max-width: 250px; min-width: 200px;">
                 
                 <transition-group name="slide-fade">
                     <div key="dynamic" class="collecting-tab" v-if="mesuring">
